# april

./: .gitignore  CMakeLists.txt  README.md  config.h  lexer.l  main.cpp  makefile  parser.h  parser.y
headers/: assigbioperator.hpp  assignment.hpp  assignmentlist.hpp  binaryope.hpp  block.hpp  boolean.hpp  booleancmp.hpp  break.hpp  codegencontext.hpp  double.hpp  elif.hpp  error.hpp  expression.hpp  exprstatement.hpp  for.hpp  fordecl.hpp  foriteration.hpp  funclist.hpp  function.hpp  identifier.hpp  if.hpp  integer.hpp  list.hpp  listaccess.hpp  methodcall.hpp  methodhandlecast.hpp  methodhandlefile.hpp  methodhandleio.hpp  methodhandlelist.hpp  methodhandlestring.hpp  methodhandletime.hpp  methodstruct.hpp  msg.hpp  node.hpp  not.hpp  return.hpp  statement.hpp  string.hpp  stringarray.hpp  symbol.hpp  (+3 more)
src/: assigbioperator.cpp  assignment.cpp  assignmentlist.cpp  binaryope.cpp  block.cpp  boolean.cpp  booleancmp.cpp  break.cpp  codegencontext.cpp  double.cpp  elif.cpp  error.cpp  exprstatement.cpp  for.cpp  fordecl.cpp  foriteration.cpp  funclist.cpp  function.cpp  identifier.cpp  if.cpp  integer.cpp  list.cpp  listaccess.cpp  methodcall.cpp  methodhandlecast.cpp  methodhandlefile.cpp  methodhandleio.cpp  methodhandlelist.cpp  methodhandlestring.cpp  methodhandletime.cpp  methodstruct.cpp  msg.cpp  not.cpp  return.cpp  string.cpp  stringarray.cpp  symbol.cpp  varDeclarationDeduce.cpp  vardeclaration.cpp  vardeclarationglobal.cpp
test/: ambitos.april  fibonacci.april  ficheros.april  for_range.april  globales.april  lib.april  listas.april  metodo_newton.april  num_pares.april  recursividad_simple.april  test.april  test_arrayString.april  test_for.april  test_func.april  test_lis.april  test_opeString.april
test/exam_1/: cambio_num.april  crapula.april  ejer_1.april  ejer_2.april  ejer_3.april  ejer_4.april  ejer_5.april  encriptacion.april  num_incremetal.april
